# UEServer

./: .gitignore  .mcp.json  CHANGELOG  CLAUDE.md  ISSUES  QUICKSTART.md  RAG  README.md  TESTING.md  TODO  UEServer.code-workspace  test_tcp_client.py
bridge/: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_without_ue.py
bridge/ue_bridge/: __init__.py  __main__.py  cli.py  port_discovery.py  tcp_client.py  tools.py  types.py
doc/: DONE  project-HOWTO.md  project-description.md
mcp/: .gitignore  README.md  pyproject.toml  requirements.txt
mcp/ue_mcp/: __init__.py  __main__.py  server.py
rpc/: README.md  UEServer.uplugin
rpc/Binaries/Linux/: UnrealEditor.modules  libUnrealEditor-UEServer.debug  libUnrealEditor-UEServer.sym
rpc/Source/UEServer/: UEServer.Build.cs
rpc/Source/UEServer/Private/: UEServerModule.cpp  UEServerRPC.cpp
rpc/Source/UEServer/Public/: UEServer.h  UEServerRPC.h
