[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ue-mcp"
version = "0.1.0"
description = "Thin MCP wrapper for ue-bridge CLI"
authors = [{name = "TwistedBrain"}]
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.9",
]

[project.scripts]
ue-mcp = "ue_mcp.__main__:main"

[tool.setuptools]
packages = ["ue_mcp"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
